# rtaudio.js

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  typedoc.json
docs/: index.html  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: RtAudio.html
docs/enums/: RtAudioApi.html  RtAudioErrorType.html  RtAudioFormat.html  RtAudioStreamFlags.html  RtAudioStreamStatus.html
docs/interfaces/: DeviceInfo.html  StreamParameters.html
docs/types/: RtAudioCallback.html  StreamOptions.html
src/: node_rtaudio.cpp  node_rtaudio.hpp
test/: echo.js
